--- a/source/_posts/记一次折腾电信光猫的经历.md
+++ b/source/_posts/记一次折腾电信光猫的经历.md
@@ -20,7 +20,15 @@ date: 2023-07-09 16:00:55
 3. 其中 `"baseinfoSet_TELECOMACCOUNT":"telecomadmin"` 是超级管理员账户，`"baseinfoSet_TELECOMPASSWORD"` 后面的字符串是超级管理员密码。
 4. 超级管理员密码是 `ASCII` 格式，对照 `ASCII` 码表解出原始字符串后，拼在 `telecomadmin` 后即得到超级管理员密码。
 
-使用超级管理员登陆后，记住光猫的逻辑ID，后面换光猫的时候会用到。
+使用超级管理员登陆后，记住光猫的逻辑ID，后面换光猫的时候会用到（如下图）。
+![逻辑ID](/images/lightModem/逻辑ID.png "逻辑ID")
+
+# 更换光猫
+
+1. 更换光猫的时，先将新光猫恢复出厂设置，然后插上电源和光纤。
+2. 进入 <http://192.168.1.1:8080> ，点击设备注册。
+![设备注册](/images/lightModem/设备注册.png "设备注册")
+3. 输入从老光猫上看到的逻辑ID，等待业务下发后，设备注册成功，这一步如果不成功的话，可以打 10000 人工客服咨询。
 
 # TEWA-1000E
 
@@ -31,8 +39,6 @@ TEWA-1000E 是一款 10GEPON 猫，有三个千兆口。
 3. 进入设备管理页面，右键查看源代码，搜索 set3_sessionKey 字符串，会看到 set3_sessionKey_XXX。
 4. 进入 <http://192.168.1.1:8080/usbbackup.cmd?action=backupeble&set3_sessionKey=set3_sessionKey_XXX>。
 5. 在这个页面按 F12 打开控制台，输入以下代码执行：
-
-
 ```javascript
 usbsubarea = {
    selectedIndex: 0,
@@ -43,6 +49,11 @@ usbsubarea = {
  };
  btnApply();
 ```
-
 6. 此时 U 盘中会多一个文件夹，里面有一个 cfg 后缀的文件。
 7. 在电脑上使用[解密工具](https://github.com/jonirrings/xor)解密，得到一个 xml 文件。文件中搜索 COM_TeleComAccount 即得到超级密码。
+
+# 光猫改桥接模式
+
+1. 进入 <http://192.168.1.1:8080> 后台管理页面，找到网络设置
+2. 如下图更改对应设置即可，LAN 口绑定 4 个都勾选上
+![桥接](/images/lightModem/桥接.png "桥接")
